fix(oc): 修复OC新收益计算错误的问题