@@ -5,7 +5,6 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import pn.torn.goldeneye.base.exception.BizException;
 import pn.torn.goldeneye.constants.torn.TornConstants;
 import pn.torn.goldeneye.constants.torn.enums.TornOcStatusEnum;
 import pn.torn.goldeneye.repository.dao.faction.oc.TornFactionOcDAO;
@@ -30,7 +29,7 @@ import java.util.function.Function;
 import java.util.stream.Collectors;
 
 /**
- * OC收益计算服务（增强版）
+ * OC收益计算服务
  *
  * @author Bai
  * @version 0.3.0
@@ -51,95 +50,42 @@ public class TornOcIncomeService {
      */
     @Transactional(rollbackFor = Exception.class)
     public void calculateAndSaveIncome(TornFactionOcDO oc) {
-        // 1. 检查OC是否已完成
-        if (!TornOcStatusEnum.getCompleteStatusList().contains(oc.getStatus())) {
-            throw new BizException("OC未完成，无法计算收益");
-        }
-
-        // 2. 检查是否已计算过
-        long existCount = incomeDao.lambdaQuery().eq(TornFactionOcIncomeDO::getOcId, oc.getId()).count();
-        if (existCount > 0) {
-            log.warn("OC收益已计算过，跳过: ocId={}", oc.getId());
-            return;
-        }
-
-        // 3. 计算工时
+        // 1. 计算工时
         List<WorkingHoursDTO> workingHoursList = workingHourService.calculateWorkingHours(oc);
         if (CollectionUtils.isEmpty(workingHoursList)) {
             log.warn("OC没有参与者，跳过收益计算: ocId={}", oc.getId());
             return;
         }
 
-        // 4. 查询所有slot获取道具成本
+        // 2. 查询所有slot获取道具成本
         List<TornFactionOcSlotDO> slots = ocSlotDao.lambdaQuery()
                 .eq(TornFactionOcSlotDO::getOcId, oc.getId())
                 .isNotNull(TornFactionOcSlotDO::getUserId)
                 .list();
         Map<Long, Long> userItemCostMap = slots.stream()
                 .collect(Collectors.toMap(TornFactionOcSlotDO::getUserId,
-                        slot -> slot.getOutcomeItemValue() != null ? slot.getOutcomeItemValue() : 0L,
-                        Long::sum));
+                        TornFactionOcSlotDO::getOutcomeItemValue, Long::sum));
 
-        // 5. 计算总道具成本
+        // 3. 计算总道具成本
         long totalItemCost = userItemCostMap.values().stream()
                 .mapToLong(Long::longValue)
                 .sum();
 
-        // 6. 计算总有效工时
-        BigDecimal totalEffectiveHours = workingHoursList.stream()
-                .map(WorkingHoursDTO::getEffectiveWorkingHours)
-                .reduce(BigDecimal.ZERO, BigDecimal::add);
-
-        // 7. 判断成功还是失败
+        // 4. 判断成功还是失败
         boolean isSuccess = TornOcStatusEnum.SUCCESSFUL.getCode().equals(oc.getStatus());
         List<IncomeCalculationDTO> incomeList = new ArrayList<>();
 
-        if (isSuccess) {
-            // 成功：总收益 - 总道具成本后按工时分配 + 各自道具报销
-            long netReward = oc.getRewardMoney() - totalItemCost;
-            for (WorkingHoursDTO workingHours : workingHoursList) {
-                // 计算工时占比
-                BigDecimal ratio = workingHours.getEffectiveWorkingHours()
-                        .divide(totalEffectiveHours, 6, RoundingMode.HALF_UP);
-                // 计算分配收益
-                long allocatedIncome = BigDecimal.valueOf(netReward)
-                        .multiply(ratio)
-                        .setScale(0, RoundingMode.HALF_UP)
-                        .longValue();
-                // 获取道具成本
-                long itemCost = userItemCostMap.getOrDefault(workingHours.getUserId(), 0L);
-                // 最终收益 = 分配收益 + 道具报销
-                long finalIncome = allocatedIncome + itemCost;
-                incomeList.add(new IncomeCalculationDTO(workingHours, ratio, itemCost, allocatedIncome, finalIncome));
-            }
-        } else {
-            // 失败：收益为0，道具成本平摊（负收益）
-            int participantCount = workingHoursList.size();
-            long costPerPerson = totalItemCost / participantCount;
-            long remainder = totalItemCost % participantCount;
-            for (int i = 0; i < workingHoursList.size(); i++) {
-                WorkingHoursDTO workingHours = workingHoursList.get(i);
-                long itemCost = userItemCostMap.getOrDefault(workingHours.getUserId(), 0L);
-                // 平摊成本，余数分配给前几个人
-                long sharedCost = i < remainder ? costPerPerson + 1 : costPerPerson;
-                // 最终收益 = 自己的道具成本 - 平摊成本
-                long finalIncome = itemCost - sharedCost;
-                BigDecimal ratio = workingHours.getEffectiveWorkingHours()
-                        .divide(totalEffectiveHours, 6, RoundingMode.HALF_UP);
-
-                incomeList.add(new IncomeCalculationDTO(workingHours, ratio, itemCost, 0L, finalIncome));
-            }
+        long netReward = oc.getRewardMoney() - totalItemCost;
+        for (WorkingHoursDTO workingHours : workingHoursList) {
+            long itemCost = userItemCostMap.get(workingHours.getUserId());
+            incomeList.add(new IncomeCalculationDTO(workingHours, itemCost, totalItemCost,
+                    oc.getRewardMoney(), netReward));
         }
 
-        // 8. 保存详细记录
+        // 5. 保存详细记录
         saveIncomeRecords(oc, incomeList, isSuccess, oc.getRewardMoney(), totalItemCost);
-        // 8. 更新汇总表
-        calcMonthlyIncomeSummary(LocalDateTime.now().format(DateTimeFormatter.ofPattern("yyyy-MM")));
-
-        log.info("OC收益计算完成: ocId={}, 参与人数={}, 总收益={}, 状态={}",
-                oc.getId(), incomeList.size(),
-                incomeList.stream().mapToLong(IncomeCalculationDTO::getFinalIncome).sum(),
-                oc.getStatus());
+        // 6. 更新汇总表
+        calcMonthlyIncomeSummary(oc.getExecutedTime().format(DateTimeFormatter.ofPattern("yyyy-MM")));
     }
 
     /**
@@ -170,25 +116,6 @@ public class TornOcIncomeService {
     }
 
     /**
-     * 获取已计算收益的OC ID列表
-     */
-    public List<Long> getCalculatedOcIds(List<Long> ocIds) {
-        if (CollectionUtils.isEmpty(ocIds)) {
-            return List.of();
-        }
-
-        return incomeDao.lambdaQuery()
-                .in(TornFactionOcIncomeDO::getOcId, ocIds)
-                .select(TornFactionOcIncomeDO::getOcId)
-                .groupBy(TornFactionOcIncomeDO::getOcId)
-                .list()
-                .stream()
-                .map(TornFactionOcIncomeDO::getOcId)
-                .distinct()
-                .toList();
-    }
-
-    /**
      * 查询用户在时间范围内的收益
      */
     public UserIncomeVO queryUserIncome(long userId, LocalDateTime startTime, LocalDateTime endTime) {
@@ -199,13 +126,8 @@ public class TornOcIncomeService {
                 .le(TornFactionOcIncomeDO::getOcExecutedTime, endTime)
                 .list();
         if (CollectionUtils.isEmpty(incomeRecords)) {
-            return new UserIncomeVO(userId, startTime, endTime, 0L, 0, List.of());
+            return new UserIncomeVO(userId, startTime, endTime, 0, List.of());
         }
-
-        // 2. 计算总收益
-        long totalIncome = incomeRecords.stream()
-                .mapToLong(TornFactionOcIncomeDO::getFinalIncome)
-                .sum();
 
         // 3. 查询OC详情
         Set<Long> ocIds = incomeRecords.stream()
@@ -232,16 +154,16 @@ public class TornOcIncomeService {
                 .map(data -> new IncomeDetailVO(data, ocMap.get(data.getOcId()), ocPositionMap))
                 .sorted(Comparator.comparing(IncomeDetailVO::getExecutedTime,
                         Comparator.nullsLast(Comparator.reverseOrder())))
-                .collect(Collectors.toList());
+                .toList();
 
-        return new UserIncomeVO(userId, startTime, endTime, totalIncome, incomeRecords.size(), details);
+        return new UserIncomeVO(userId, startTime, endTime, incomeRecords.size(), details);
     }
 
     /**
      * 保存收益记录
      */
-    private void saveIncomeRecords(TornFactionOcDO oc, List<IncomeCalculationDTO> incomeList,
-                                   boolean isSuccess, long totalReward, long totalItemCost) {
+    public void saveIncomeRecords(TornFactionOcDO oc, List<IncomeCalculationDTO> incomeList,
+                                  boolean isSuccess, long totalReward, long totalItemCost) {
         List<TornFactionOcIncomeDO> dataList = incomeList.stream()
                 .map(income -> {
                     TornFactionOcIncomeDO data = new TornFactionOcIncomeDO(oc, income);
@@ -257,7 +179,7 @@ public class TornOcIncomeService {
     /**
      * 按指定月份重新计算收益汇总（用于月度结算）
      */
-    private void calcMonthlyIncomeSummary(String yearMonth) {
+    public void calcMonthlyIncomeSummary(String yearMonth) {
         // 1. 查询该月所有已完成的OC记录
         LocalDateTime startTime = LocalDateTime.parse(yearMonth + "-01 00:00:00",
                 DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss"));
